# weather-cli

./: README.md  pyproject.toml  requirements.txt  weather.py
src/: cache.py  weather.py
src/weather_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_weather.py
